[package]
name = "rust-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.202", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }

[dev-dependencies]
http-body-util = "0.1.1"
serde_json = "1.0.117"
tower = { version = "0.4.13", features = ["util"] }
